# HFT_system

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
apps/trading_engine/: Cargo.toml
apps/trading_engine/src/: config.rs  db.rs  main.rs  server.rs  state.rs
apps/trading_engine/tests/: e2e_flow.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  time.rs  types.rs
crates/execution/: Cargo.toml
crates/execution/src/: client.rs  lib.rs  signer.rs
crates/feed_handler/: Cargo.toml
crates/feed_handler/src/: binance.rs  lib.rs
crates/risk_engine/: Cargo.toml
crates/risk_engine/src/: lib.rs
crates/strategy/: Cargo.toml  build.rs
crates/strategy/src/: lib.rs  liquidation.rs  momentum.rs  ping_pong.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
dashboard/: index.html
tools/benchmark/: Cargo.toml
tools/benchmark/src/: main.rs
tools/recorder/: Cargo.toml
tools/recorder/src/: main.rs
tools/replay/: Cargo.toml
tools/replay/src/: main.rs
tools/stress_test/: Cargo.toml
tools/stress_test/src/: main.rs
