[package]
name = "trading_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
rtrb = "0.3"
common = { workspace = true }
feed_handler = { workspace = true }
strategy = { workspace = true }
risk_engine = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
ctrlc = "3.4"
