[package]
name = "trading_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
rtrb = "0.3"
common = { workspace = true }
feed_handler = { workspace = true }
strategy = { workspace = true }
risk_engine = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
ctrlc = "3.4"
telemetry = { workspace = true }
axum = { version = "0.6", features = ["headers"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
core_affinity = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
execution = { workspace = true }
toml = "0.7"


